--- a/src/App.css
+++ b/src/App.css
@@ -11,15 +11,14 @@
   padding: 30px 0;
 }
 .details .large-img {
-  max-width: 500px;
-  min-width: 290px;
+  width: 500px;
+  height: 380px;
   overflow: hidden;
   margin: 25px;
 }
 .large-img img {
   width: 100%;
   height: 100%;
-  max-height: 400px;
   display: block;
   object-fit: cover;
 }
@@ -40,6 +39,7 @@
 }
 .box .row span {
   color: crimson;
+  font-weight: 600;
 }
 .box .colors button {
   width: 30px;
@@ -55,7 +55,6 @@
 }
 .thumb {
   width: 100%;
-  /* height: 80px; */
   display: flex;
   cursor: pointer;
   margin: 10px 0;
@@ -64,13 +63,13 @@
   width: 100px;
   height: 100%;
   display: block;
-  object-fit: content;
+  object-fit: cover;
   border: 1px solid #ddd;
   margin-right: 5px;
   opacity: 0.7;
   border-radius: 5px;
 }
-.thumb img .active {
+.thumb img.active {
   opacity: 1;
   border: 1px solid lightseagreen;
 }
@@ -84,11 +83,28 @@
   margin-top: 15px;
 }
 
+/*------------ Responsive --------------*/
 @media (max-width: 500px) {
-  .thumb {
-    height: 50px;
+  .app {
+    margin: 50px auto;
+  }
+  .details {
+    padding: 25px 0;
+  }
+  .large-img-wrapper {
+    text-align: center;
+  }
+  .details .large-img {
+    width: 90%;
+    height: 90%;
+    margin: 0;
+  }
+  .details .box {
+    width: 90%;
+    height: 90%;
+    margin: 0;
   }
   .thumb img {
-    width: 50px;
+    width: 68px;
   }
 }
